# data_pipeline_project

./: README.md  docker-compose.yml  pyproject.toml
consumer/: Dockerfile  consumer.py
producer/: Dockerfile  producer.py
