[tool.poetry]
name = "data-pipeline-project"
version = "0.1.0"
description = ""
authors = ["oriojas <oscarriojas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
